assets/v2/neon/neon-fire-vars.scss
// neon-fire-vars
//
// Variables that the Neon Fire subtheme uses

@import "neon-shared-vars";
@import "css-vars";

$theme-primary-color: #ff6e40;
$theme-accent-color: #2196f3;
$theme-text-on-primary-color-color: #fff;
$theme-text-on-accent-color-color: #fff;

@include css-vars((
    --theme-primary-color: $theme-primary-color,
    --theme-accent-color: $theme-accent-color,
    --theme-text-on-primary-color-color: $theme-text-on-primary-color-color,
    --theme-text-on-accent-color-color: $theme-text-on-accent-color-color,
));


.brightness-dark,
.brightness-black {
    $theme-accent-color: #00e5ff;

    @include css-vars((
        --theme-accent-color: $theme-accent-color,
    ));
}

